# Dynamic-Obstacle-Tracker-and-Avoidance-ORCA

./: README.md
env/: CHANGELOG.rst  CMakeLists.txt  package.xml
env/launch/: turtlebot3_empty_world.launch  turtlebot3_env22.launch  turtlebot3_env_hospital_small-edit.launch  turtlebot3_env_hospital_small.launch  turtlebot3_env_navigation.launch  turtlebot3_env_open_spaces_wsh-edit.launch  turtlebot3_env_open_spaces_wsh.launch  turtlebot3_env_open_spaces_wwh-edit.launch  turtlebot3_env_open_spaces_wwh.launch  turtlebot3_museum.launch  turtlebot3_simple_obstacle_1.launch
env/maps/: hospital_small.pgm  hospital_small.yaml  hospital_small3.pgm  museum.pgm  museum.yaml  simple_obs1.pgm  simple_obs1.yaml  turtlebot3_open_spaces-edit.pgm  turtlebot3_open_spaces-edit.yaml
env/worlds/: hospital_small.world  (+5 more)
interfacer_scan/: CMakeLists.txt  package.xml
obstacle_detector/: CMakeLists.txt  package.xml
orca/: CHANGELOG.rst  CMakeLists.txt  package.xml
orca_msgs/: CHANGELOG.rst  CMakeLists.txt  package.xml
orca_msgs/msg/: AgentState.msg  DetectedEntity.msg  Vector2.msg
person/: CMakeLists.txt  package.xml
spawn_robot_tools_pkg/: CMakeLists.txt  package.xml  setup.py
spawn_robot_tools_pkg/launch/: move_ball_model.launch  move_model.launch  spawn_and_delete_server.launch  spawn_object.launch  spawn_robot_urdf.launch  spawn_robot_urdf_multiple.launch  spawn_robot_xacro.launch  spawn_robot_xacro_multiple.launch  spawn_sdf.launch  spawn_sdf_robotdesc.launch
spawn_robot_tools_pkg/models/lowpoly_human/: model.config  model.sdf
spawn_robot_tools_pkg/models/lowpoly_human/meshes/: lowpoly_human.dae
spawn_robot_tools_pkg/models/standard_apple/: model.config  model.sdf
spawn_robot_tools_pkg/models/standard_apple/meshes/: apple_simple.dae
spawn_robot_tools_pkg/models/standard_cube/: model.config  model.sdf
spawn_robot_tools_pkg/models/standard_cylinder/: model.config  model.sdf
spawn_robot_tools_pkg/models/standard_sphere/: model.config  model.sdf
spawn_robot_tools_pkg/rviz_config/: robot_urdf.rviz
spawn_robot_tools_pkg/scripts/: inertial_calculator.py  model_twist_keyboard.py  move_ball_like_model.py  move_generic_model_script.py  move_object_in_circles.py  spawn_delete_object.py
spawn_robot_tools_pkg/src/spawn_robot_tools_pkg/: get_model_gazebo_pose.py  move_generic_model.py
spawn_robot_tools_pkg/worlds/: model.world  urdf_demo.world
split_scan/: CMakeLists.txt  package.xml
(+137 files in other folders)
